# sol-nft

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
client/: badge-program.ts  badge_platform.ts  solpg_test.ts
programs/badge-platform/: Cargo.toml
programs/badge-platform/src/: constants.rs  lib.rs  state.rs
programs/badge-platform/src/instructions/: burn_badge.rs  initialize_badge.rs  mint_badge.rs  mod.rs
test/: anchor.test.ts  solpg_anchor.test.ts
