[package]
name = "badge-platform"
version = "0.1.0"
description = "Social Good NFT Badges (Anchor)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "badge_platform"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
solana-program = "1.18.0"
spl-token-2022 = "3.0.0"
